<resources>
    <string name="app_name" translatable="false">智慧路灯助手</string>
    <string name="username" translatable="false">用户名</string>
    <string name="password" translatable="false">密码</string>
    <string name="login" translatable="false">登录</string>
    <string name="exit" translatable="false">退出</string>
    <string name="sure" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="pleaseinputusername" translatable="false">请输入用户名</string>
    <string name="pleaseinputpassword" translatable="false">请输入密码</string>
    <string name="conntect" translatable="false">连接</string>
    <string name="updatepro" translatable="false">更新数据</string>
    <string name="temp" translatable="false">温度：</string>
    <string name="humi" translatable="false">湿度：</string>
    <string name="unknown" translatable="false">未知</string>
    <string name="light" translatable="false">光照：</string>
    <string name="online" translatable="false">在线</string>
    <string name="outline" translatable="false">离线</string>
    <string name="status" translatable="false">状态：</string>
    <string name="LED" translatable="false">灯光</string>
    <string name="turnon" translatable="false">打开</string>
    <string name="turnoff" translatable="false">关闭</string>
    <string name="windows" translatable="false">窗帘</string>
    <string name="br" translatable="false">——————————————————————————————————————————————</string>
    <string name="CONTROL" translatable="false">设备控制</string>
    <string name="PROsearch" translatable="false">属性查询</string>
    <string name="outlinetip" translatable="false">设备离线时，将查询最近一次上报的数据</string>
    <string name="voltage" translatable="false">电压：</string>
    <string name="current" translatable="false">电流：</string>
    <string name="power" translatable="false">功率：</string>
</resources>
