<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <!--    <TextView-->
<!--        android:id="@+id/textView_led"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="100dp"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:text="@string/LED"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_br" />-->

    <!--    <TextView-->
<!--        android:id="@+id/textView_windows"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="290dp"-->
<!--        android:layout_marginLeft="290dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:text="@string/windows"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_br" />-->

<!--    <Switch-->
<!--        android:id="@+id/switch_windows"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginTop="70dp"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView_windows"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_br" />-->

<!--    <Switch-->
<!--        android:id="@+id/switch_led"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="188dp"-->
<!--        android:layout_marginLeft="188dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:ellipsize="middle"-->
<!--        android:scrollbarSize="40dp"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView_led"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_br" />-->

    <Button
        android:id="@+id/button_Con"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"

        android:text="@string/updatepro"

        app:layout_constraintBottom_toTopOf="@+id/textView_br"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/PROsearch"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="400dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/br"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_zhuangtai"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_zhuangtai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="80dp"
        android:text="@string/status"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_line"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/outline" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_zhuangtai"
        app:srcCompat="@drawable/voltage" />

    <TextView
        android:id="@+id/textView_humi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_wendu"
        app:layout_constraintTop_toBottomOf="@+id/textView_status" />

    <TextView
        android:id="@+id/textView_light"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_guangzhao"
        app:layout_constraintTop_toBottomOf="@+id/textView_temp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_shidu"
        app:srcCompat="@drawable/power" />

    <TextView
        android:id="@+id/textView_temp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_shidu"
        app:layout_constraintTop_toBottomOf="@+id/textView_humi" />

    <TextView
        android:id="@+id/textView_shidu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="28dp"
        android:text="@string/current"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_wendu" />

    <TextView
        android:id="@+id/textView_wendu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/voltage"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_zhuangtai" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView_windows"-->
<!--        android:layout_width="85dp"-->
<!--        android:layout_height="85dp"-->
<!--        android:layout_marginStart="200dp"-->
<!--        android:layout_marginLeft="200dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView_br"-->
<!--        app:srcCompat="@drawable/offwindows" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_wendu"
        app:srcCompat="@drawable/current" />

    <TextView
        android:id="@+id/textView_guangzhao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/power"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_shidu" />

    <Button
        android:id="@+id/button_timing"
        android:layout_width="385dp"
        android:layout_height="50dp"

        android:layout_marginTop="12dp"

        android:text="@string/sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_switch_state" />

    <ImageView
        android:id="@+id/imageView_led"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_br"
        app:srcCompat="@drawable/ledoff" />

    <TextView
        android:id="@+id/textView_colon1"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:text=":"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_min"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/spinner_hour"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Spinner
        android:id="@+id/spinner_sec"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:entries="@array/sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/spinner_min"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView_br"
        android:layout_width="418dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/br"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinner_hour"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="44dp"
        android:entries="@array/hour"
        app:layout_constraintStart_toEndOf="@+id/imageView_timing"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Spinner
        android:id="@+id/spinner_switch_light"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:entries="@array/switch_light"
        app:layout_constraintStart_toEndOf="@+id/imageView_led"
        app:layout_constraintTop_toBottomOf="@+id/textView_br" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/CONTROL"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Spinner
        android:id="@+id/spinner_min"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:entries="@array/min"
        app:layout_constraintStart_toEndOf="@+id/spinner_hour"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/imageView_timing"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_led"
        app:srcCompat="@drawable/timing" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="99"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/spinner_switch_light"
        app:layout_constraintTop_toBottomOf="@+id/textView_br"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textView_colon2"
        android:layout_width="10dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text=":"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_sec"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/spinner_min"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Spinner
        android:id="@+id/spinner_switch_state"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="4dp"
        android:entries="@array/switch_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hour" />

    <TextView
        android:id="@+id/textView_led2_value"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_led2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_led3_value"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_led3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_led2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="L2："
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_led1_value"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_led3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="L3："
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_led2_value"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_led1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:text="L1："
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView_led1_value"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/unknown"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView_led1"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <!--    <Button-->
<!--        android:id="@+id/button_exitiot"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:background="@android:color/background_light"-->
<!--        android:text="@string/exit"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:text="@string/outlinetip"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button_exitiot" />-->

</androidx.constraintlayout.widget.ConstraintLayout>